Release notes for Amesos2 in Trilinos 11.8 (Apr. 2014):
--------------------------------------------------------
 - Amesos2's adapter for Tpetra now caches Import and Export objects,
   so that it doesn't have to recreate them on every solve.  This
   fixes Bug 6011 and should improve performance of solves.

Release notes for Amesos2 in Trilinos 11.6 (Sept. 2013):
--------------------------------------------------------
 - Added experimental support for Cholmod, a sparse Cholesky solver.

Release notes for Amesos2 in Trilinos 11.0 (Sept. 2012):
--------------------------------------------------------
 - Added support for Pardiso-MKL (multithreaded solver)
 - Several bug fixes

Release notes for Amesos2 in Trilinos 10.8 (Sept. 2011):
--------------------------------------------------------
 - Initial Public release of Amesos2. Amesos2 provides a common interface to
   different direct solver libraries from Trilinos. 
 - Supports SuperLU, SuperLU_MT and SuperLU_Dist direct solvers.
 - Supports Epetra and Tpetra matrices and mulitvectors.
 - Supports 64-bit and complex data types.


