@@ -1,3 +1,8 @@
+Release notes for Amesos2 in Trilinos 12.2
+-----------------------------------------------------
+- Added MUMPS 5.0 support
+
+
 Release notes for Amesos2 in Trilinos 11.8 (Apr. 2014):
 --------------------------------------------------------
  - Amesos2's adapter for Tpetra now caches Import and Export objects,
